# slow5tools

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  config.mk.in  configure.ac  installdeps.mk  setup.py
.github/workflows/: c-cpp-2  c-cpp-selfhosted-arm32  c-cpp-selfhosted-arm32.yml  c-cpp-selfhosted-mac.yml  c-cpp-selfhosted.yml  c-cpp.yml  cython.yml  release-simulation.yml  release.yml
data/exp/chr22_meth_example-subset/: exp.blow5.index
docs/: .doxygen  archive-lossy.md  archive.md  commands.md  compatibility.md  datasets.md  faq.md  getting_started.md  index.md  oneliners.md  software.md  workflows.md
docs/man/man3/: SLOW5_FILE.3  __kstring_t.3  __slow5idx_t.3  command.3  fast5_file_t.3  fast5_t.3  format_map.3  hFILE.3  ks_isort_stack_t.3  ks_tokaux_t.3  program_meta.3  slow5idx.h.3  slow5idx1_t.3
docs/notes/: lib_design.c  names.md  test_fast5_const_var.tex
docs/plot/: gpgpu_read_time.html  gpgpu_read_time_1.html  gpgpu_read_time_thread.html  plot_gpgpu.R
docs/pres/: script  slides.sent
docs/report/: ACM-Reference-Format.bst  Makefile  abstract.tex  acmart.cls  appendix.tex  back.tex  bib.bib  disc.tex  experi.tex  intro.tex  main.aux  main.bbl  main.blg  main.ilg  main.lof  main.lot  main.nlo  main.nls  main.out  main.tex  main.toc  methods.tex  report.tex
docs/report/ACM/: Makefile  acmart.cls  background.tex  conclusion.tex  intro.tex  main.blg  main.out  main.tex
docs/uni/pres/: .slides.sent  script  slides.md
docs/uni/report/: abstract.tex  acmart.cls  appendix.tex  back.tex  bib.bib  conc.tex  disc.tex  experi.tex  future.tex  gpgpu.html  intro.tex  main.aux  main.bbl  main.blg  main.ilg  main.lof  main.lot  main.nlo  main.nls  main.out  main.tex  main.toc  methods.tex
examples/: .gitignore  build.sh  example.slow5  random_read.c  sequential_read.c
plot/: gpgpu_size.html  plot_bench.R  plot_wolf.R
plot/data/slow5-perf/: bases_read_vs_threads.html  blow5.bench.stderr1  blow5.bench.stderr16  blow5.bench.stderr2  blow5.bench.stderr32  blow5.bench.stderr4  blow5.bench.stderr8  blow5_times  clow5.bench.stderr1  clow5.bench.stderr16  clow5.bench.stderr2  clow5.bench.stderr32  clow5.bench.stderr4  clow5.bench.stderr8  clow5_times  f2s.blow5.stderr  f2s.clow5.stderr  file_sizes.txt  index.blow5.stderr  index.clow5.stderr  index.slow5.stderr  list_nbases  nbases  size_per_base.html  sizes.tsv  slow5.bench.stderr1  slow5.bench.stderr16  slow5.bench.stderr2  slow5.bench.stderr32  slow5.bench.stderr4  slow5.bench.stderr8  slow5_times
plots/: gpgpu.R  gpgpu_read_time.html  gpgpu_read_time_1.html  gpgpu_read_time_thread.html  gpgpu_size.html  plot_gpgpu.R
python/: .gitignore  example.py  pyslow5.h  pyslow5.pxd  pyslow5.pyx
scripts/: fast5_to_h5dump.sh  get_hdf5_hier.py  get_list_nbases.sh  get_sizes.sh  get_times.sh  mixed-multi-fast5-to-blow5.sh  mixed-single-fast5-to-blow5.sh  mixed_single_fast5_to_blow5.sh  which_fast5_static.py  which_fast5_static_heir.py
scripts/realtime-f2s/: pipeline.sh  readme.md  realf2s.sh  run.sh
scripts/realtime-f2s/monitor/: ensure.sh  monitor.sh  simulator.sh
src/: cat.c  cmd.h  concat.c  degrade.c  degrade.h  demux.c  demux.h  error.h  extract.c  f2s.c  f5c.h  f5cmisc.h  fast5.h  fast5lite.h  fast5toslow5.c  fastt_main.c  ftidx.c  ftidx.h  get.c  index.c  kstring.c  main.c  merge.c  merge_slow5.c  misc.c  misc.h  misc_old.h  press.c  press.h  quickcheck.c  read_fast5.c  read_fast5.h  read_file_threaded.c  read_slow5.c  s2f.c  skim.c  slow5.c  slow5.h  slow5_defs.h  slow5_err.h  (+24 more)
src/htslib/: bcf_sr_sort.pico  bgzf.pico  bgzip  config.h  config.mk  config.status  errmod.pico  faidx.pico  hfile.pico  hfile_net.pico  hts.pico  hts_os.pico  htsfile  kfunc.pico  knetfile.pico  kstring.pico  md5.pico  multipart.pico  probaln.pico  realn.pico  regidx.pico  sam.pico  synced_bcf_reader.pico  tabix  tbx.pico  textutils.pico  thread_pool.pico  vcf.pico  vcf_sweep.pico  vcfutils.pico
src/htslib/cram/: cram_codecs.pico  cram_decode.pico  cram_encode.pico  cram_external.pico  cram_index.pico  cram_io.pico  cram_samtools.pico  cram_stats.pico  files.pico  mFILE.pico  open_trace_file.pico  pooled_alloc.pico  rANS_static.pico  sam_header.pico  string_alloc.pico
src/htslib/test/: fieldarith  hfile  sam  (+9 more)
src/klib/: kstring.c
src/old/: fastt_main.c  libslow5.h  misc_old.c  slow5idx_old.h  slow5misc.h
test/: .gitignore  cat_test.sh  check_fast5_static.py  check_fast5_static_nice.py  concat_test.sh  convert_slow5_test.c  download_test_dataset.sh  endian_test.c  f2s_output_test.sh  f2s_s2f_integrity_test.sh  f2s_view_diff_test.sh  fast5_var_const.txt  fast5_var_const_nice.txt  get_hdf5_hierarchy.py  integrity_test.sh  make_blow5.c  merge_integrity_test.sh  merge_split_integrity_test.sh  multi_process_f2s_threaded_merge.sh  run_check_fast5_static.sh  slow5tools_get_test.sh  slow5tools_index_test.sh  split_integrity_test.sh  test.sh  test_all.sh  test_cat.sh  test_degrade.sh  test_exp.sh  test_extensive.sh  test_f2s.sh  test_f2s_s2f_integrity.sh  test_f2s_view_diff.sh  test_fout.sh  test_get.sh  test_index.sh  test_merge.sh  test_merge_split_integrity.sh  test_merge_threads.sh  test_quickcheck.sh  test_s2f.sh  (+19 more)
test/bench/: benchmark.sh  comprehensive_bench.sh  multi_process_f2s_threaded_merge.sh  simple_bench.sh
test/fast5/: fast5_to_h5dump.sh
test/misc/: convert_slow5_test.c  get_sizes.sh  get_times.sh  make_blow5.c  test_fout.sh  test_query.sh  test_stdout.sh
test/random/: dec_to_bin  dec_to_bin.c  exp  is_dir_c  is_dir_c++  list_dir_c  list_dir_c++  magic  print_bin  print_bin.c  print_bin_array  print_bin_array.c  test_error_h  test_error_h.c
test/zlib/: gzip_compress.c  gzip_inflate  gzip_write_stream  test_gzip_read  test_gzip_read.c  zlib_read  zlib_read.c
tests/: .gitignore  benchmark.sh  cmp_bin.sh  exp.c  gzip_inflate.c  gzip_write_stream.c  is_dir_c++.c  is_dir_c.c  list_dir_c++.C  list_dir_c.c  magic.c  plot.R  test.sh  test_fastt.sh  test_fout.sh  test_gzip_byline.sh  test_gzip_read.c  test_output.sh  test_query.sh  test_stdout.sh  thread.c  zlib_read.c
(+384 files in other folders)
